@@ -1,0 +1,160 @@
+<HTML>
+<HEAD>
+<TITLE>
+	Changes in TIFF v3.9.3
+</TITLE>
+</HEAD>
+
+<BODY BGCOLOR=white>
+<FONT FACE="Helvetica, Arial, Sans">
+<FONT FACE="Helvetica, Arial, Sans"> 
+
+<BASEFONT SIZE=4>
+<B><FONT SIZE=+3>T</FONT>IFF <FONT SIZE=+2>C</FONT>HANGE <FONT SIZE=+2>I</FONT>NFORMATION</B>
+<BASEFONT SIZE=3>
+
+<UL>
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+<B>Current Version</B>: v3.9.3<BR>
+<B>Previous Version</B>: <A HREF=v3.9.2.html>v3.9.2</a><BR>
+<B>Master FTP Site</B>: <A HREF="ftp://ftp.remotesensing.org/pub/libtiff">
+ftp.remotesensing.org</a>, directory pub/libtiff</A><BR>
+<B>Master HTTP Site</B>: <A HREF="http://www.remotesensing.org/libtiff">
+http://www.remotesensing.org/libtiff</a> 
+<HR SIZE=4 WIDTH=65% ALIGN=left>
+</UL>
+
+<P>
+This document describes the changes made to the software between the
+<I>previous</I> and <I>current</I> versions (see above).  If you don't
+find something listed here, then it was not done in this timeframe, or
+it was not considered important enough to be mentioned.  The following
+information is located here:
+<UL>
+<LI><A HREF="#hightlights">Major Changes</A>
+<LI><A HREF="#configure">Changes in the software configuration</A>
+<LI><A HREF="#libtiff">Changes in libtiff</A>
+<LI><A HREF="#tools">Changes in the tools</A>
+<LI><A HREF="#contrib">Changes in the contrib area</A>
+</UL>
+<p> 
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="highlights"><B><FONT SIZE=+3>M</FONT>AJOR CHANGES:</B></A>
+
+<UL>
+
+	<li> Fixes for CVE-2010-1411.
+
+        <li> Various reported bug fixes.
+
+</UL>
+
+
+<P><HR WIDTH=65% ALIGN=left>
+<!--------------------------------------------------------------------------->
+
+<A NAME="configure"><B><FONT SIZE=+3>C</FONT>HANGES IN THE SOFTWARE CONFIGURATION:</B></A>
+
+<UL>
+
+	<li> libtool is updated to version 2.2.10.
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="libtiff"><B><FONT SIZE=+3>C</FONT>HANGES IN LIBTIFF:</B></A>
+
+<UL>
+	<li> Fix a couple of issues that trigger failures in some
+	cases when using TIFFReadScanline() with JPEG compressed
+	subsampled ycbcr images.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1936
+
+	<li> Ensure tile and scanline sizes are reset when moving to
+	new directories.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1936
+
+	<li> Do not generate a JPEGTables tag when creating the JPEG
+	TIFF as is is not required in order to prevent it from being
+	unused and filled with invalid data.  (Leave it to be
+	generated by later activity.)
+	http://bugzilla.maptools.org/show_bug.cgi?id=2135
+
+	<li> Don't return error on badly-terminated MMR strips.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2029
+
+	<li> Have TIFFTAG_REFERENCEBLACKWHITE always print 6 floats
+	instead of 2*SamplesPerPixel.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2186
+
+	<li> Ensure that JPEG quality is always set in
+	JPEGPreEncode(), not just when we want to output local tables.
+	Otherwise the quality used during compression may not be right
+	and might not match the tables in the tables tag.  This bug
+	only occurs when seeking between directories in the midst of
+	writing blocks.  http://trac.osgeo.org/gdal/ticket/3539
+
+	<li> OJPEG: Report an error and avoid a crash if the input
+	file is so broken that the strip offsets are not defined.
+
+	<li> Eliminate FAX3 decoder buffer overrun possibility
+	(CVE-2010-1411).
+
+	<li> Restore ReferenceBlackWhite as a non-custom field.  This
+	avoids a multi-thread reentrancy problem as well as fixing
+	output of wrong tag value due to redundant definitions for the
+	same tag in the tiffFieldInfo[] array.  Resolves
+	http://bugzilla.maptools.org/show_bug.cgi?id=2185
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!-------------------------------------------------------------------------->
+	
+<A NAME="tools"><B><FONT SIZE=+3>C</FONT>HANGES IN THE TOOLS:</B></A>
+
+<UL>
+
+        <li> tiff2pdf: Write the JPEG SOI headers into the TIFF strip
+        data rather than skipping them.  This fixes the ability to view in
+        Acrobat Reader, Evince, and Ghostscript.
+        http://bugzilla.maptools.org/show_bug.cgi?id=2135
+
+        <li> ppm2tiff: While case for parsing comment line
+        requires extra parenthesis to work as expected.  Reported by
+        Thomas Sinclair.
+
+        <li> tiffcp: add a new option -x to force merged tiff
+        file PAGENUMBER value in sequence for users who care the page
+        sequence, this will also prevent tiff2pdf from creating pdf file from
+        the merged tiff file with wrong page sequence.
+
+        <li> tiffcp: Applied Tom Lane's patch to reject YCbCr
+        subsampled data since tiffcp currently doesn't support it.
+        http://bugzilla.maptools.org/show_bug.cgi?id=2097
+
+</UL>
+
+<P><HR WIDTH=65% ALIGN=left>
+
+<!--------------------------------------------------------------------------->
+
+<A NAME="contrib"><B><FONT SIZE=+3>C</FONT>HANGES IN THE CONTRIB AREA:</B></A>
+
+<UL> 
+
+	<li> None
+
+</UL>
+
+Last updated $Date: 2010-06-11 22:02:15 $.
+
+</BODY>
+</HTML>
